--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -19,13 +19,16 @@
     "./constants": {
       "types": "./dist/constants/index.d.ts",
       "default": "./dist/constants/index.js"
+    },
+    "./utils": {
+      "types": "./dist/utils/index.d.ts",
+      "default": "./dist/utils/index.js"
     }
   },
   "scripts": {
     "build": "tsc",
     "type-check": "tsc --noEmit",
-    "dev": "tsc --watch",
-    "assets:sync": "node scripts/sync-assets.js"
+    "dev": "tsc --watch"
   },
   "dependencies": {
     "zustand": "^4.4.7"
