--- a/package.json
+++ b/package.json
@@ -2,20 +2,34 @@
   "name": "neural-architect",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "description": "Gamified Pomodoro web application",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "scripts": {
-    "dev:web": "npm run dev --workspace=apps/web",
-    "build:shared": "npm run build --workspace=packages/shared",
-    "build:web": "npm run build --workspace=apps/web",
-    "type-check": "npm run build:shared && npm run type-check --workspaces --if-present",
-    "lint": "npm run lint --workspaces --if-present"
+    "dev": "vite",
+    "build": "tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "type-check": "tsc --noEmit"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
+    "vite": "^7.3.1"
   },
   "engines": {
     "node": ">=18.0.0",
